--- a/games/lmarbles/Makefile
+++ b/games/lmarbles/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2005/04/16 14:43:49 cube Exp $
+# $NetBSD: Makefile,v 1.5 2005/06/01 18:02:51 jlam Exp $
 
 DISTNAME=	lmarbles-1.0.7
 PKGREVISION=	2
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=lgames/}
 
-MAINTAINER=	xs@nitric.net
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://lgames.sourceforge.net/
 COMMENT=	Atomix-like puzzle
 
