--- a/games/lpairs/Makefile
+++ b/games/lpairs/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2005/04/11 21:45:51 tv Exp $
+# $NetBSD: Makefile,v 1.11 2005/06/01 18:02:51 jlam Exp $
 
 DISTNAME=	lpairs-1.0.1
 PKGREVISION=	1
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=lgames/}
 
-MAINTAINER=	xs@nitric.net
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://lgames.sourceforge.net/
 COMMENT=	Memory game matching pairs of cards
 
