--- a/textproc/diction/Makefile
+++ b/textproc/diction/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2004/02/14 00:54:45 grant Exp $
+# $NetBSD: Makefile,v 1.5 2005/06/01 03:01:58 snj Exp $
 
 DISTNAME=	diction-1.08
 CATEGORIES=	textproc
 MASTER_SITES=	http://www.moria.de/~michael/diction/
 
-MAINTAINER=	xs@nitric.net
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/diction/diction.html
 COMMENT=	GNU version of diction and style
 
