--- a/databases/libgda/Makefile.common
+++ b/databases/libgda/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.32 2005/07/21 16:29:46 wiz Exp $
+# $NetBSD: Makefile.common,v 1.33 2005/08/10 20:56:14 jlam Exp $
 #
 
 DISTNAME=		libgda-1.2.2
@@ -6,7 +6,7 @@ CATEGORIES=		databases gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/libgda/1.2/}
 EXTRACT_SUFX=		.tar.bz2
 
-MAINTAINER=		sab@posix.org.uk
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.gnome-db.org/
 COMMENT=		GNU database access library
 
