--- a/math/gcalctool/Makefile
+++ b/math/gcalctool/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2005/08/10 20:56:19 jlam Exp $
+# $NetBSD: Makefile,v 1.43 2005/08/21 07:58:16 jmmv Exp $
 #
 
 DISTNAME=		gcalctool-5.5.42
@@ -6,7 +6,7 @@ CATEGORIES=		math gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gcalctool/5.5/}
 EXTRACT_SUFX=		.tar.bz2
 
-MAINTAINER=		sab@posix.org.uk
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://calctool.sourceforge.net/
 COMMENT=		Desktop calculator for GNOME
 
