--- a/x11/libzvt/Makefile
+++ b/x11/libzvt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2005/07/21 16:30:01 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2005/08/10 20:56:29 jlam Exp $
 #
 
 DISTNAME=		libzvt-2.0.1
@@ -7,7 +7,7 @@ CATEGORIES=		x11 gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/libzvt/2.0/}
 EXTRACT_SUFX=		.tar.bz2
 
-MAINTAINER=		sab@posix.org.uk
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.gnome.org/
 COMMENT=		Virtual Terminal Widget Library for GNOME2
 
