--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.670 2005/08/13 07:52:40 adrianp Exp $
+# $NetBSD: Makefile,v 1.671 2005/09/03 14:21:13 minskim Exp $
 #
 
 COMMENT=	Development utilities
@@ -491,6 +491,7 @@ SUBDIR+=	php-sysvsem
 SUBDIR+=	php-sysvshm
 SUBDIR+=	physfs
 SUBDIR+=	picp
+SUBDIR+=	picprg
 SUBDIR+=	pilrc
 SUBDIR+=	pkg-config
 SUBDIR+=	ply
