--- a/sysutils/cdrdao/Makefile
+++ b/sysutils/cdrdao/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2005/06/04 19:05:38 adrianp Exp $
+# $NetBSD: Makefile,v 1.25 2005/07/19 16:33:57 drochner Exp $
 
 .include "../../sysutils/cdrdao/Makefile.common"
 
-PKGREVISION=		2
+PKGREVISION=		3
 
 PKGNAME=		cdrdao-${CDRDAO_VER}
 
