--- a/audio/xmms-bump-scope/Makefile
+++ b/audio/xmms-bump-scope/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.10 2005/02/21 20:26:08 hubertf Exp $
+# $NetBSD: Makefile,v 1.11 2005/04/11 21:44:58 tv Exp $
 #
 
 DISTNAME=	bump_scope-0.0.3
 PKGNAME=	xmms-bump-scope-0.0.3
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	xmms audio
 MASTER_SITES=	http://staff.xmms.org/zinx/xmms/
 
