--- a/chat/xaric/Makefile
+++ b/chat/xaric/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2005/04/11 21:45:06 tv Exp $
+# $NetBSD: Makefile,v 1.9 2005/05/22 20:07:43 jlam Exp $
 #
 
 DISTNAME=	xaric-0.12.1
+PKGREVISION=	1
 CATEGORIES=	chat
 MASTER_SITES=	ftp://ftp.xaric.org/pub/xaric/	\
 		http://www.xaric.org/downloads/
