--- a/comms/minicom/Makefile
+++ b/comms/minicom/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.42 2005/05/22 20:07:44 jlam Exp $
+# $NetBSD: Makefile,v 1.43 2005/06/19 11:34:45 veego Exp $
 
 DISTNAME=	minicom-2.1
+PKGREVISION=	1
 CATEGORIES=	comms
 MASTER_SITES=	http://alioth.debian.org/download.php/123/
 
