--- a/devel/elfsh/Makefile
+++ b/devel/elfsh/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.12 2005/04/11 21:45:20 tv Exp $
+# $NetBSD: Makefile,v 1.13 2005/06/16 06:57:46 jlam Exp $
 #
 
 VERS=		0.51b3
 DISTNAME=	elfsh-${VERS}-portable
 PKGNAME=	elfsh-${VERS}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	http://elfsh.segfault.net/files/
 EXTRACT_SUFX=	.tgz
