--- a/lang/awka/Makefile
+++ b/lang/awka/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2002/06/05 15:39:55 yyamano Exp $
+# $NetBSD: Makefile,v 1.6 2003/07/17 21:43:59 grant Exp $
 #
 
 DISTNAME=	awka-0.7.5
+PKGREVISION=	1
 CATEGORIES=	lang devel
 MASTER_SITES=	http://awka.sourceforge.net/
 
