--- a/ham/grig/Makefile
+++ b/ham/grig/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2005/08/14 07:12:07 wulf Exp $
+# $NetBSD: Makefile,v 1.7 2005/09/09 00:24:53 minskim Exp $
 #
 
 DISTNAME=	grig-0.4.3
+PKGREVISION=	1
 CATEGORIES=	ham
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=groundstation/}
 
