--- a/www/p5-HTML-Mason/Makefile
+++ b/www/p5-HTML-Mason/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2005/08/06 06:19:39 jlam Exp $
+# $NetBSD: Makefile,v 1.20 2005/08/22 19:03:04 tv Exp $
 
-DISTNAME=		HTML-Mason-1.31
-PKGNAME=		p5-${DISTNAME}
+DISTNAME=		HTML-Mason-1.3101
+PKGNAME=		p5-HTML-Mason-1.31.1
 SVR4_PKGNAME=		p5hma
 CATEGORIES=		www perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=HTML/}
