--- a/math/mathomatic/Makefile
+++ b/math/mathomatic/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.49 2005/09/07 02:13:18 reed Exp $
+# $NetBSD: Makefile,v 1.50 2005/09/10 18:16:04 minskim Exp $
 #
 
-DISTNAME=		mathomatic-12.4.10
+DISTNAME=		mathomatic-12.4.11
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
