--- a/databases/mysql4-client/Makefile.common
+++ b/databases/mysql4-client/Makefile.common
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.common,v 1.42 2005/07/29 21:02:35 xtraeme Exp $
+# $NetBSD: Makefile.common,v 1.43 2005/08/06 18:27:29 adrianp Exp $
 
-DISTNAME=		mysql-4.1.13
+DISTNAME=		mysql-4.1.14
 CATEGORIES=		databases
 MASTER_SITES=		http://mirrors.sunsite.dk/mysql/Downloads/MySQL-4.1/ \
 			ftp://sunsite.dk/mirrors/mysql/Downloads/MySQL-4.1/ \
