--- a/net/netsaint-plugins/Makefile
+++ b/net/netsaint-plugins/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2005/04/11 21:46:52 tv Exp $
+# $NetBSD: Makefile,v 1.22 2005/06/20 02:59:36 jlam Exp $
 #
 
 DISTNAME=		netsaint-plugins-1.2.9-4
@@ -7,7 +7,7 @@ PKGREVISION=		8
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=netsaintplug/}
 
-MAINTAINER=		murray@river-styx.org
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://netsaintplug.sourceforge.net/
 COMMENT=		NetSaint plugins
 
