--- a/news/slrn/Makefile
+++ b/news/slrn/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.34 2004/11/19 13:35:43 adam Exp $
+# $NetBSD: Makefile,v 1.35 2005/04/11 21:47:03 tv Exp $
 
 DISTNAME=	slrn-0.9.8.1
 CATEGORIES=	news
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=slrn/}
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	mjl@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://slrn.sourceforge.net/
 COMMENT=	Highly customizable threaded newsreader
 
