--- a/sysutils/bacula/Makefile.common
+++ b/sysutils/bacula/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.5 2005/01/15 08:33:23 jmmv Exp $
+# $NetBSD: Makefile.common,v 1.6 2005/04/11 21:47:22 tv Exp $
 #
 
 DISTNAME=		bacula-1.36.0
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=bacula/}
 
-MAINTAINER=		mjl@netbsd.org
+MAINTAINER=		tech-pkg@netbsd.org
 HOMEPAGE=		http://www.bacula.org/
 COMMENT=		Network Backup Solution
 
