--- a/www/ap2-auth-pgsql/Makefile
+++ b/www/ap2-auth-pgsql/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/03/24 21:13:03 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2005/04/11 21:47:51 tv Exp $
 
 DISTNAME=		mod_auth_pgsql-2.0.2b1
 PKGNAME=		${DISTNAME:S/^mod-/ap2/:S/_/-/g}
@@ -32,4 +32,3 @@ do-install:
 
 .include "../../mk/pgsql.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
-
