--- a/devel/libgnomeui/Makefile
+++ b/devel/libgnomeui/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.46 2005/07/27 17:25:02 drochner Exp $
+# $NetBSD: Makefile,v 1.47 2005/08/10 20:56:15 jlam Exp $
 #
 
 DISTNAME=	libgnomeui-2.10.1
@@ -29,7 +29,7 @@ PKGCONFIG_OVERRIDE=	${PKGCONFIG_BASE}.in
 BUILDLINK_DEPENDS.gtk2=	gtk2+>=2.4.1
 BUILDLINK_DEPENDS.libgnome=	libgnome>=2.8.1
 
-# Needed because part of the pc files doesn't get filled in till after 
+# Needed because part of the pc files doesn't get filled in till after
 # configure does its pass
 
 post-configure:
