--- a/emulators/suse91_gtk/Makefile
+++ b/emulators/suse91_gtk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/07/13 10:31:14 tron Exp $
+# $NetBSD: Makefile,v 1.2 2005/04/11 21:45:44 tv Exp $
 
 DISTNAME=		suse_gtk-${SUSE_VERSION}
 CATEGORIES=		emulators
@@ -18,7 +18,7 @@ NO_BUILD=		YES
 PLIST_SRC=		${WRKDIR}/PLIST_DYNAMIC
 
 RPMFILES=		glib-1.2.10-586.${SUSE_ARCH}.rpm \
-			gtk-1.2.10-877.${SUSE_ARCH}.rpm 
+			gtk-1.2.10-877.${SUSE_ARCH}.rpm
 
 .include "../../emulators/suse91_linux/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
