--- a/games/gnuchess-book-medium/Makefile
+++ b/games/gnuchess-book-medium/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2004/03/08 06:05:31 minskim Exp $
+# $NetBSD: Makefile,v 1.13 2004/04/24 22:46:10 jlam Exp $
 
 DISTNAME=		medium
 PKGNAME=		${CHESS_ENGINE}-book-${DISTNAME}-20000511
@@ -29,7 +29,7 @@ BOOK_FILE=		book.dat
 do-build:
 	@${ECHO} "book add ${PGN_FILE}" > ${WRKSRC}/makebook.gnuchess
 	@${ECHO} "quit" >> ${WRKSRC}/makebook.gnuchess
-	@cd ${WRKSRC} && ${CAT} makebook.gnuchess | ${PREFIX}/bin/gnuchess 
+	@cd ${WRKSRC} && ${CAT} makebook.gnuchess | ${PREFIX}/bin/gnuchess
 
 do-install:
 	${INSTALL_DATA_DIR} ${BOOKDIR}
