--- a/lang/tcl-itcl/Makefile
+++ b/lang/tcl-itcl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/04/11 21:46:17 tv Exp $
+# $NetBSD: Makefile,v 1.15 2005/05/25 18:23:46 kristerw Exp $
 
 DISTNAME=	itcl3.2
 PKGNAME=	tcl-itcl-3.2
@@ -12,7 +12,7 @@ COMMENT=	[incr Tcl] object-oriented extension to Tcl/Tk
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-CONFLICTS+=	tcl-itcl-current-[0-9]*      
+CONFLICTS+=	tcl-itcl-current-[0-9]*
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
