--- a/parallel/pvm3/Makefile
+++ b/parallel/pvm3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2005/04/11 21:47:04 tv Exp $
+# $NetBSD: Makefile,v 1.38 2005/06/01 18:03:08 jlam Exp $
 
 DISTNAME=	pvm3.4.5
 PKGNAME=	pvm-3.4.5
@@ -57,7 +57,7 @@ do-install:
 .endfor
 .for __tmp__ in pvm pvmgs
 	${LIBTOOL} --mode=install ${INSTALL_PROGRAM} \
-		${WRKSRC}/lib/${PVM_ARCH}/${__tmp__} ${PVM_DIR}/lib/${PVM_ARCH}/ 
+		${WRKSRC}/lib/${PVM_ARCH}/${__tmp__} ${PVM_DIR}/lib/${PVM_ARCH}/
 .endfor
 	${INSTALL_PROGRAM} ${WRKSRC}/lib/${PVM_ARCH}/pvmd3		\
 		${PVM_DIR}/lib/${PVM_ARCH}
