--- a/security/qca-tls/Makefile
+++ b/security/qca-tls/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2005/06/01 18:03:21 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2005/09/13 04:27:21 dmcmahill Exp $
 
 DISTNAME=	qca-tls-1.0
 PKGREVISION=	# empty
@@ -24,7 +24,7 @@ post-configure:
 		${QTDIR}/bin/qmake qca-tls.pro -o Makefile.orig;	\
 		${SED} -e "s,-rpath .*,-rpath ${QTDIR}/lib," Makefile.orig > Makefile;	\
 	)
-		
+
 do-install:
 	${INSTALL_DATA_DIR} ${QTDIR}/plugins/crypto
 	cd ${WRKSRC} && \
