--- a/sysutils/tcx/Makefile
+++ b/sysutils/tcx/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/21 17:24:39 martti Exp $
+# $NetBSD: Makefile,v 1.4 2003/12/03 22:14:46 kristerw Exp $
 
 DISTNAME=	tcx-linux
 PKGNAME=	tcx-19940124
@@ -6,7 +6,7 @@ CATEGORIES=	sysutils
 MASTER_SITES=	ftp://ibiblio.unc.edu/pub/Linux/utils/compress/
 
 MAINTAINER=	tech-pkg@NetBSD.org
-#HOMEPAGE=	
+#HOMEPAGE=
 COMMENT=	Transparently compress executables
 
 WRKSRC=		${WRKDIR}/tcx
