--- a/inputmethod/sj3-lib/Makefile
+++ b/inputmethod/sj3-lib/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2005/03/24 21:12:55 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2005/04/11 21:46:11 tv Exp $
 
 DISTNAME=	sj3-2.0.1.20
 PKGNAME=	sj3-lib-2.0.1.20
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	japanese inputmethod
 MASTER_SITES=	ftp://ftp.sony.co.jp/pub/unsupported/src/	\
 		ftp://ftp.cs.titech.ac.jp/pub/japanese/sj3/
