--- a/inputmethod/sj3-server/Makefile
+++ b/inputmethod/sj3-server/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2005/04/11 21:46:11 tv Exp $
+# $NetBSD: Makefile,v 1.6 2005/07/19 10:17:18 grant Exp $
 
 DISTNAME=	sj3-server-2.0.1.20
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	japanese inputmethod
 MASTER_SITES=	# empty
 DISTFILES=	# empty
