--- a/meta-pkgs/XFree86/Makefile
+++ b/meta-pkgs/XFree86/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/07/31 02:28:15 xtraeme Exp $
+# $NetBSD: Makefile,v 1.8 2005/04/11 21:46:32 tv Exp $
 
 DISTNAME=	# empty
 PKGNAME=	XFree86-${XF_VER}
@@ -24,11 +24,11 @@ DEPENDS+=	XFree86-fonts75dpi>=4.4.0:../../fonts/XFree86-fonts75dpi
 DEPENDS+=	XFree86-fontserver>=4.4.0:../../fonts/XFree86-fontserver
 DEPENDS+=	XFree86-fontsScalable>=4.4.0:../../fonts/XFree86-fontsScalable
 
-NO_BUILD=		# defined
-NO_CHECKSUM=		# defined
-NO_MTREE=		# defined
-NO_XFREE86_TARGETS=	# defined
-NO_CONFIGURE=		# defined
+NO_BUILD=		yes
+NO_CHECKSUM=		yes
+NO_MTREE=		yes
+NO_XFREE86_TARGETS=	yes
+NO_CONFIGURE=		yes
 USE_DIRS+=		XFree86-1.0
 
 do-install:
