--- a/meta-pkgs/XFree86/Makefile.common
+++ b/meta-pkgs/XFree86/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.21 2005/05/22 20:08:14 jlam Exp $
+# $NetBSD: Makefile.common,v 1.22 2005/05/23 09:30:32 rillig Exp $
 #
 # XBUILD_DIRS is the group of directories under ${WRKSRC} that will
 #   be built in.
@@ -128,7 +128,7 @@ PKG_SKIP_REASON+=       "X11_TYPE=XFree86 is mandatory."
 .    endif
 .endif
 
-NO_MTREE=		# defined
+NO_MTREE=		yes
 
 WRKSRC?=		${WRKDIR}/xc
 X11ROOT?=		${LOCALBASE}/${X11ROOT_PREFIX}
